Removed the visibility = hidden of modal and fixed its position on the page

--- a/style.css
+++ b/style.css
@@ -13,28 +13,16 @@ body{
 }
 
 .container{
-    padding-top: 5em;
+    padding: 5em 1em 1em 1em;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: space-around;
 }
 .container h1{
     text-align: center;
     font: lighter 2.5em "Roboto", sans-serif;
-    margin-bottom: 3em;
-}
-
-/* ====== Styling the new button ======= */
-
-.newContainer{
-    margin:1.5em;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.new{
-    outline: none;
-    font: 1em "Open Sans", sans-serif;
-    border: none;
-    background: none;
-    color: white;
+    margin-bottom: 1em;
 }
 
 /* ====== Styling the entries ======= */
@@ -43,34 +31,28 @@ body{
     border-top: 0.1px solid rgba(255, 255, 255, 0.096);
     border-bottom: 0.1px solid rgba(255, 255, 255, 0.096);
     padding: .8em;
+    width: 100%;
 }
+
+.checkToggler{
+    font-family: FontAwesome;
+    content: "\f058";
+}
+
+.checkToggler:checked{
+    color: #61b628;
+}
+
+
 
 /* ====== Styling the form ======= */
 .modal{
-    visibility: hidden;
-    height: 100vh;
-    padding: 2em;
-    z-index:1;
-    height: 100%;
-    width: 100%;
-    position: fixed;
-    left: 0;
-    top: 0;
+    padding: 1em 4em 3em 4em;
     background-color: #1e1e1eb4;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 ul{
     list-style-type: none;
-}
-
-form{
-    background-color: #1e1e1e;
-    padding: 2em;
-    border: 0.5px solid white;
-    border-radius: 10px;
 }
 
 label:not(.agree){
@@ -107,16 +89,13 @@ input[type="number"]{
 }
 
 .send{
-    margin-top: 5em;
-    display: flex;
-    justify-content: flex-end;
+    margin-top: 2em;
 }
 
 .send button{
-    margin-left: 1em;
     color: white;
     padding: .5em;
-    width: 4em;
+    width: 7em;
     outline: none;
     border: none;
 }
@@ -173,21 +152,29 @@ input[type="number"]{
     }
 }
 
+
+
 @media screen and (min-width:768px){
     .container{
-        margin: 0 8em 0 8em;
+        margin: 0 4em 0 4em;
     }
 
     .newContainer{
         display: block;
     }
 
-    .new:hover{
-        color: #61b628a1;
+    ul{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);       
+        column-gap: 2em;    
     }
 
-    .new.new:active{
-        color: #61b628;
+    label:not(.agree){
+        margin: 1em 0 1em 0;
+    }
+
+    .read{
+        margin:2em 0 1em 0;
     }
 
     #data{
@@ -195,6 +182,7 @@ input[type="number"]{
         font-size: 1em;
         align-items: center;
         justify-content: space-around;
+        width: 60vw;
     }
 
     #check{
@@ -207,17 +195,6 @@ input[type="number"]{
     .author,
     .pages{
         flex-basis:5em;
-    }
-    
-    .modal{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    form{
-        width: 30vw;
     }
 
     #check:hover{
@@ -242,5 +219,12 @@ input[type="number"]{
 
     .add:active{
         background-color: #61b628;
+    }
+}
+
+
+@media screen and (min-width:1500px){
+    .container{
+        margin: 0 15em 0 15em;
     }
 }
